Revamp failure testing with query assertions
Before the introduction of query assertions (the `QueryAssert` class),
`assertQueryFails` was used to verify that a query fails with expected
error message AND the failure exception type is `TrinoException`.

With query assertions, the typical pattern for testing query failures
became:

    assertThatThrownBy(() -> query(...))
        ....

This unfortunately does not verify that the exception type is the
`TrinoException`. The existing alternative:

    assertTrinoExceptionThrownBy(() -> query(...))
        ...

is rarely used, perhaps because it's longer and the
established shorter pattern is followed.

Both above methods share the disadvantage of basing on the `QueryAssert`
construction side-effect of evaluating the query eagerly.

This commit revamps `QueryAssert` to make failures first class citizen
from `QueryAssert` perspective, on par with query results. Expected
failures are verified to be `TrinoException` type. The result is more
fluent API, as both success and failures assertions are available on the
same query assert object, and thus can be auto-completed by an IDE.

From code updating perspective, most of the code updates fall into two
categories:

* failure testing. This functionality is available from query assert via
  `.failure()` accessor. Code was updated with regular expression
  - search for: `(assertThatThrownBy|assertTrinoExceptionThrownBy)\(\(\) -> (assertions\.)?query\(`
  - replace with: `assertThat($2query(`
  - add `.failure()` to access assertions on the failure exception
    (use `nonTrinoExceptionFailure()` for cases where query incorrectly
    fails without a proper `TrinoException`)

* detailed inspection of `MaterializedResult` objects. This lower-level
  functionality is available from query assert via `.result()`
  accessor.

(cherry picked from commit 1da9822d5c787f2b2b4b29ac89db640ad5f73d11)