@@ -65,7 +65,7 @@ public class TestJmxQueries
     public void testShowSchemas()
     {
         assertThat(assertions.query("SHOW SCHEMAS"))
-                .matches(result -> result.getOnlyColumnAsSet().equals(ImmutableSet.of(INFORMATION_SCHEMA, JMX_SCHEMA_NAME, HISTORY_SCHEMA_NAME)));
+                .result().onlyColumnAsSet().isEqualTo(Set.of(INFORMATION_SCHEMA, JMX_SCHEMA_NAME, HISTORY_SCHEMA_NAME));
     }
 
     @Test
@@ -76,7 +76,7 @@ public class TestJmxQueries
                 .collect(toImmutableSet());
 
         assertThat(assertions.query("SHOW TABLES"))
-                .matches(result -> result.getOnlyColumnAsSet().containsAll(standardNamesLower));
+                .result().onlyColumnAsSet().containsAll(standardNamesLower);
     }
 
     @Test
@@ -112,9 +112,9 @@ public class TestJmxQueries
                 .succeeds();
 
         assertThat(assertions.query("SELECT * FROM \"java.lang:*\""))
-                .matches(result -> result.getRowCount() > 1);
+                .result().rowCount().isGreaterThan(1);
 
         assertThat(assertions.query("SELECT * FROM \"jAVA.LANg:*\""))
-                .matches(result -> result.getRowCount() > 1);
+                .result().rowCount().isGreaterThan(1);
     }
 }
